2007-02-09  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* providerRegister.c: 
	Fixed 1656317: check file pointer before closing.

2007-02-07  Chris Buccella

	* httpAdapter.c
	Fixed problem with sfcbd ignoring signals when USE_THREADS enabled

2007-02-06  Sven Schuetz

	* objectImpl.h:
	Fixed compile warning, added function declaration of ClObjectGetObject

2007-02-02  Sven Schuetz

	* cimXmlGen.c:
	Fixed 1650708 embeddedObject qualifier in wrong place

2007-02-02  Sven Schuetz

	* cimXmlOps.y:
	Added some comsmetic changes to the way paramvalues are handled
	in the parser, addition to 1637947

2007-01-31  Sven Schuetz

	* cimXmlRequest.c, cimXmlOps.y, objectImpl.c, instance.c, cimXmlGen.h,
	cimXmlParser.h, cimXmlGen.c, array.c, cimXmlParser.c:
	Fixed 1637947: embedded Objects as method args

2007-01-30  Sven Schuetz

	* internalProvider.c:
	Fixed 1644223: internalProdiver segfaults with a propertyFilter

2007-01-26  Chris Buccella

	* httpAdapter.c, sfcBroker.c
	Added suport for threads on http connections

2007-01-19  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-119.boeblingen.de.ibm.com>

	* classSchema2c.c, interop_classSchema2.c, README: 
	Fixed 1639670: allow the generation of big-endian compilable schema
	files on i386 build systems.

	* cimXmlParser.c: 
	Fixed 1638073: added unescaping code to the XML parser.

2007-01-18  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-119.boeblingen.de.ibm.com>

	* cimXmlOps.y, cimXmlParser.c:
	Fix update for 1635811: qualifier and reference type keybinding
	processing.

2007-01-17  Sven Schuetz
	* providerMgr.c:
	2nd fix for 1636805: ain does not work for indication subscriptions

2007-01-16  Sven Schuetz

	* interopProvider.c, internalProvider.h:
	Fixed 1636805: ain does not work for indication subscriptions

2007-01-16  Sven Schuetz

	* internalProvider.h, interopProvider.c, objectImpl.c, providerDrv.c: 
	Fixed 1217828: add indication SubscriptionState support

2007-01-16  Sven Schuetz
