@@ -1,3 +1,8 @@
+2007-02-14  Sven Schuetz
+
+	* brokerUpc.c, array.c, interopProvider.c, cimXmlParser.c:
+	Fixed 1652255: restructure broker upcalls
+
 2007-02-09  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>
 
 	* providerRegister.c: 
